# Longest-english-word-chain

./: .gitignore  CMakeLists.txt  README.md
gui/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
include/: Core.h  IOUtil.h
src/: ArgParser.cpp  CMakeLists.txt  IOUtil.cpp  Wordlist.cpp
src/core/: CMakeLists.txt  CharConverter.cpp  Core.cpp  Graph.cpp  Graph.h  WordChainCoreInterface.cpp  WordMap.cpp
test/: ArgParser_test.cpp  CMakeLists.txt  Core_test.cpp  IOUtil_test.cpp  hello_test.cpp
