file(GLOB core_files *.cpp)
add_library(Core SHARED ${core_files})

install(
        TARGETS Core
#        RUNTIME DESTINATION ${PROJECT_BINARY_DIR}/bin
#        LIBRARY DESTINATION ${PROJECT_BINARY_DIR}/bin
        RUNTIME DESTINATION ${EXECUTABLE_OUTPUT_PATH}
        LIBRARY DESTINATION ${EXECUTABLE_OUTPUT_PATH}
)